# PlausiDen-Forge

./: .gitignore  AGENTS.md  Cargo.toml  DEPRECATION.md  DESIGN.md  FORGE_ROADMAP.md  LICENSE  Makefile  PLAUSIDEN_ECOSYSTEM.md  README.md  SECURITY.md  TOOLS.md  backends.toml  cms-schema.json  commerce.toml  deny.toml  domains.toml  email.toml  federation.toml  forge.sh  forge.toml  forge_contrast.py  forms.toml  inject_backends.py  inject_seo.py  inject_sri.py  justfile  memberships.toml  phases.toml  privacy.toml  serve.py  trust-safety.toml
.github/: pull_request_template.md
cms/: about--privacy-policy.json  about--terms-and-conditions.json  about.json  anthropic.json  blog.json  challenge.json  compose.json  contact.json  docs.json  encrypted-inquiry.json  field-notes.json  fly.json  github.json  index.json  leaderboard.json  linear.json  my-wins.json  notion.json  platform.json  plausiden.json  post-skill.json  pricing.json  profile.json  programs.json  prosperity-club.json  quote.json  render.json  sacred-vote.json  services.json  signin.json  stripe.json  vercel.json  visit.json  votes.json  why.json
cms-northbrook-backup/: contact.json  field-notes.json  visit.json
corpora/: mcp_tools.json  page_types.json  reference_baseline.json  reference_patterns.json  skills.json
crates/ai-pipeline-core/: Cargo.toml
crates/ai-pipeline-core/src/: lib.rs
crates/assets-core/: Cargo.toml
crates/assets-core/src/: lib.rs
crates/commerce-core/: Cargo.toml
crates/commerce-core/src/: lib.rs
crates/commerce-storefront-core/: Cargo.toml
crates/commerce-storefront-core/src/: lib.rs
crates/compliance-evidence/: Cargo.toml
crates/compliance-evidence/src/: lib.rs
crates/deploy-core/: Cargo.toml
crates/deploy-core/src/: lib.rs  profile.rs  target.rs
crates/deploy-gemini/: Cargo.toml
crates/deploy-gemini/src/: lib.rs
crates/deploy-i2p/: Cargo.toml
crates/deploy-i2p/src/: lib.rs
crates/deploy-ipfs/: Cargo.toml
crates/deploy-ipfs/src/: lib.rs
crates/deploy-lokinet/: Cargo.toml
crates/deploy-lokinet/src/: lib.rs
crates/deploy-onion/: Cargo.toml
crates/deploy-onion/src/: lib.rs
crates/deploy-security-rating/: Cargo.toml
crates/deploy-security-rating/src/: lib.rs
crates/doctrine-core/: Cargo.toml
crates/doctrine-core/src/: lib.rs
crates/domains-core/: Cargo.toml
crates/domains-core/src/: lib.rs
crates/dr-core/: Cargo.toml
crates/dr-core/src/: lib.rs
crates/editor-ux-core/: Cargo.toml
crates/editor-ux-core/src/: lib.rs
crates/email-core/: Cargo.toml
crates/email-core/src/: lib.rs
crates/exporters-core/: Cargo.toml
crates/exporters-core/src/: lib.rs
crates/extension-abi/: Cargo.toml
crates/extension-abi/src/: lib.rs
crates/extension-host/: Cargo.toml
crates/extension-host/src/: lib.rs
crates/federation-core/: Cargo.toml
crates/federation-core/src/: lib.rs
crates/forge-auth/: Cargo.toml
crates/forge-auth/src/: lib.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs
crates/forge-codegen/: Cargo.toml
crates/forge-codegen/src/: lib.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: anti_pattern_dictionary.rs  attest.rs  brick_library.rs  button_pool.rs  canonical_tasks.rs  content_substance.rs  cross_build_audit.rs  diagnostic.rs  doc_query.rs  exemplar_library.rs  extractors.rs  fingerprint.rs  fingerprint_migration.rs  fingerprint_registry.rs  footer_pool.rs  forge_lite.rs  gap_registry.rs  generation_plan.rs  header_pool.rs  hero_composition.rs  identity_transition.rs  interaction_defaults.rs  iso_time.rs  lib.rs  multi_pass.rs  operator_corrections.rs  originality.rs  outcome_ratings.rs  pipeline.rs  progress_events.rs  provenance.rs  reference_capture.rs  reference_composition.rs  reference_mapping.rs  resource_budgets.rs  resumption.rs  session_context.rs  session_progress.rs  session_scope.rs  site_identity.rs  (+11 more)
crates/forge-core/src/extractors/: interactive.rs  motion.rs  palette.rs  sections.rs  spacing.rs  structural.rs  typography.rs  voice.rs
crates/forge-core/tests/: pairing_invariants.rs  reference_arc_e2e.rs
crates/forge-critic/: Cargo.toml
crates/forge-critic/src/: augmentable.rs  lib.rs
crates/forge-mcp/: Cargo.toml  README.md
crates/forge-mcp/src/: main.rs  typed_args.rs
crates/forge-phases/: Cargo.toml
crates/forge-phases/src/: a11y_landmarks.rs  aesthetic_distinctiveness.rs  annotation_review.rs  asset_optimization.rs  backend_coverage.rs  carbon_budget.rs  composition_lineage.rs  content_substance.rs  contrast.rs  crawl.rs  csp.rs  csp_devmode.rs  density_audit.rs  differentiation_budget.rs  disclosure_audit.rs  dns_hygiene_lint.rs  dual_theme.rs  dynamic_runtime.rs  editorial_purity_gate.rs  external_assets.rs  forbidden_patterns.rs  forge_lite_resolve.rs  hero_composition_resolve.rs  html_semantic.rs  html_walk.rs  hunted_tier.rs  id_strategy.rs  identity_coherence.rs  iso_8601.rs  jurisdiction_compliance.rs  label_consistency.rs  lib.rs  link_check.rs  locale_html_lang.rs  loom_lint.rs  loom_sync.rs  mood_lock.rs  motion.rs  motion_respects_reduced.rs  network_target_enforcement.rs  (+34 more)
crates/forge-phases/src/reports/: latest.json
crates/forge-phases/tests/: forge_lite_fixtures.rs
docs/: AI_AUDIT.md  ARCHITECTURAL_THREADS.md  ARCHITECTURE_PRINCIPLES.md  CAPABILITY_REQUEST_WORKFLOW.md  CLAUDE_SESSION_AUDIT.md  COMMERCIALIZATION.md  DEDUP_TABLE.md  EDITORIAL_PURITY.md  ENGINEERING_DISCIPLINES.md  FORGE_LITE_DIAGNOSTIC_2026_05_22.md  FORGE_VISION.md  HUNTED_TIER_CHECKLIST.md  INTEGRATION_COVERAGE.md  JSON_OUTPUT.md  LAYOUT_CONSISTENCY_RESEARCH.md  MOM_SITE_ROUTING_DECISION_2026_05_27.md  PERSONAS.md  PER_TENANT_CORPORA.md  PHASE_PIPELINE.cfg  (+40 more)
server-stub/: Cargo.toml
server-stub/src/: lib.rs
server-stub/src/handlers/: cash_out.rs  cast_vote.rs  challenge_create.rs  enter_challenge.rs  follow.rs  list_challenges.rs  list_leaderboard.rs  list_open_votes.rs  list_touches.rs  live_start.rs  mod.rs  post_photo.rs  post_skill.rs  report_challenge.rs  report_profile.rs  sign_in.rs  sign_out.rs  sign_up.rs  upload_entry.rs  view_challenge.rs  view_profile.rs
(+225 files in other folders)
