# PlausiDen-Forge — Rust workspace.
#
# Replaces the prior bash + python implementation. Per AVP-2
# Supersociety stack: Rust is the default go-to language. The
# bash forge.sh stays in place during migration as a parity
# reference; once every phase has a Rust port it gets deleted.
#
# Crates:
#   forge-core    — types: Phase trait, Finding, Severity, BuildCtx,
#                   BuildReport, BuildError. No I/O, no deps on
#                   other forge-* crates. Pure types + small
#                   helpers; trivially testable.
#   forge-phases  — concrete implementations of the Phase trait.
#                   Each phase is a module: tokens, html_semantic,
#                   csp, seo, perf_budget, sri, loom_sync, etc.
#   forge-cli     — the binary. Parses argv, loads forge.toml,
#                   builds a phase pipeline, runs it, emits the
#                   report. Owns serde + clap deps.
#
# Future crates (queued):
#   forge-watch   — inotify-driven re-run on edit
#   forge-html    — fast read-only HTML parser wrapper (scraper / lol_html)
#   forge-css     — lightningcss wrapper for token + contrast checks
#   forge-report  — JSON + terminal renderers separated from CLI
#
# AVP-2 inline annotations used:
#   BUG ASSUMPTION    — what could go wrong in the marked block
#   SAFETY            — proof for any unsafe block
#   AVP-PASS-N        — pass-N audit findings + resolution
#   SUPERSOCIETY      — defence-in-depth measures beyond standard
#   REGRESSION-GUARD  — the past-incident a particular check guards

[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-phases",
    "crates/forge-cli",
    "crates/forge-serve",
    "crates/forge-replay",
    # T29: manifest-core — the keystone PlatformManifest type. Every
    # platform capability is declared once here and projected
    # downstream (Forge phases, runtime backends, admin UI, etc.)
    # via manifest-codegen (task #30). See
    # docs/PLATFORM_ROADMAP.md §3.
    "crates/manifest-core",
    # T30: manifest-codegen — build.rs projector that turns a
    # PlatformManifest into typed Rust constants downstream crates
    # `include!()` from $OUT_DIR. Proc-macro layer is queued for
    # later; build.rs comes first because it carries the immediate
    # codegen value with minimal compile-graph cost.
    "crates/manifest-codegen",
    # T30b: function-like proc-macros that wrap manifest-codegen's
    # projector for one-line ergonomics. Companion to the build.rs
    # path; both produce equivalent generated source.
    "crates/manifest-codegen-macros",
    # T38: deploy-core — typed DeployAdapter trait + DeployTarget +
    # SecurityProfile types every adapter (Tor onion / I2P eepsite
    # / IPFS / Gemini / Lokinet / clearnet) projects through. No
    # actual network IO at this layer; per-adapter crates land
    # separately (#39-#42).
    "crates/deploy-core",
    # T39: deploy-onion — Tor v3 hidden-service DeployAdapter.
    # First leaf network-target adapter on top of deploy-core.
    "crates/deploy-onion",
    # T40: deploy-i2p — I2P eepsite DeployAdapter (.b32.i2p).
    # Parallel in shape to deploy-onion: config + address-resolution
    # half ships first; content publish lands as a follow-up.
    "crates/deploy-i2p",
    # T41: deploy-ipfs — IPFS / IPNS DeployAdapter. Content-addressed
    # (CIDs); IPNS gives mutable pointer. Validation + snapshot-based
    # CID resolution this iteration; daemon publish step is a follow-up.
    "crates/deploy-ipfs",
    # T42: deploy-gemini — smolnet (gemini://) DeployAdapter.
    "crates/deploy-gemini",
    # T42: deploy-lokinet — Oxen mesh (.loki) DeployAdapter with
    # ONS-name resolution.
    "crates/deploy-lokinet",
    # T20: backend handler scaffolds. One module per [backends.X]
    # entry in backends.toml. Generated + maintained by
    # `loom backend-stub` / `loom backend-stub-all`. Joining the
    # workspace so `cargo check` covers it.
    "server-stub",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-or-later"
repository = "https://github.com/thepictishbeast/PlausiDen-Forge"

[workspace.dependencies]
# Errors: thiserror for typed errors at crate boundaries; anyhow at
# the binary edge so we get backtraces + context() chaining.
thiserror = "1"
anyhow = "1"

# Hashing: sha2 + base64 for SRI. blake3 considered for the next
# pass but SHA-384 is what the SRI spec mandates so the
# RFC-conforming implementation needs SHA-2 unconditionally.
sha2 = "0.10"
base64 = "0.22"

# CLI:
clap = { version = "4", features = ["derive", "env"] }

# Config + serialization:
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time:
time = { version = "0.3", features = ["formatting", "macros"] }

# Logging — tracing is the future-proof choice; env_logger is
# fine for v1.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Property-based testing per AVP-2 Tier 6. Each phase that
# parses arbitrary input MUST have a proptest target alongside
# its deterministic unit tests.
proptest = "1"

# T432: phases that mutate the static dir use tempfile to keep
# tests hermetic. RAII cleanup, no test cross-contamination.
tempfile = "3"

# T56: Ed25519 keypair + signature for the build-report Merkle
# chain attestation. ed25519-dalek is the canonical RustCrypto
# implementation, audited, no_std-capable, used by Solana / Tor /
# many others. We use it locally (no network); a future Sigstore
# extension can layer on top.
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# AVP-2 gate: no unwrap/expect in lib code without justification.
# Use the existing crate-local std::process::exit at the binary
# edge only.

[profile.release]
# REGRESSION-GUARD: opt-level=3 + LTO + single codegen unit gives
# ~2x faster forge runs vs default. The bash forge took ~6s on
# the PoC; Rust forge target is <300ms cold + <50ms warm.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
