# PlausiDen-Forge — Rust workspace.
#
# Replaces the prior bash + python implementation. Per AVP-2
# Supersociety stack: Rust is the default go-to language. The
# bash forge.sh stays in place during migration as a parity
# reference; once every phase has a Rust port it gets deleted.
#
# Crates:
#   forge-core    — types: Phase trait, Finding, Severity, BuildCtx,
#                   BuildReport, BuildError. No I/O, no deps on
#                   other forge-* crates. Pure types + small
#                   helpers; trivially testable.
#   forge-phases  — concrete implementations of the Phase trait.
#                   Each phase is a module: tokens, html_semantic,
#                   csp, seo, perf_budget, sri, loom_sync, etc.
#   forge-cli     — the binary. Parses argv, loads forge.toml,
#                   builds a phase pipeline, runs it, emits the
#                   report. Owns serde + clap deps.
#
# Future crates (queued):
#   forge-watch   — inotify-driven re-run on edit
#   forge-html    — fast read-only HTML parser wrapper (scraper / lol_html)
#   forge-css     — lightningcss wrapper for token + contrast checks
#   forge-report  — JSON + terminal renderers separated from CLI
#
# AVP-2 inline annotations used:
#   BUG ASSUMPTION    — what could go wrong in the marked block
#   SAFETY            — proof for any unsafe block
#   AVP-PASS-N        — pass-N audit findings + resolution
#   SUPERSOCIETY      — defence-in-depth measures beyond standard
#   REGRESSION-GUARD  — the past-incident a particular check guards

[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-phases",
    "crates/forge-cli",
    "crates/forge-critic",
    "crates/forge-auth",
    "crates/forge-serve",
    "crates/forge-replay",
    # T29: manifest-core — the keystone PlatformManifest type. Every
    # platform capability is declared once here and projected
    # downstream (Forge phases, runtime backends, admin UI, etc.)
    # via manifest-codegen (task #30). See
    # docs/PLATFORM_ROADMAP.md §3.
    "crates/manifest-core",
    # T30: manifest-codegen — build.rs projector that turns a
    # PlatformManifest into typed Rust constants downstream crates
    # `include!()` from $OUT_DIR. Proc-macro layer is queued for
    # later; build.rs comes first because it carries the immediate
    # codegen value with minimal compile-graph cost.
    "crates/manifest-codegen",
    # T30b: function-like proc-macros that wrap manifest-codegen's
    # projector for one-line ergonomics. Companion to the build.rs
    # path; both produce equivalent generated source.
    "crates/manifest-codegen-macros",
    # T38: deploy-core — typed DeployAdapter trait + DeployTarget +
    # SecurityProfile types every adapter (Tor onion / I2P eepsite
    # / IPFS / Gemini / Lokinet / clearnet) projects through. No
    # actual network IO at this layer; per-adapter crates land
    # separately (#39-#42).
    "crates/deploy-core",
    # T39: deploy-onion — Tor v3 hidden-service DeployAdapter.
    # First leaf network-target adapter on top of deploy-core.
    "crates/deploy-onion",
    # T40: deploy-i2p — I2P eepsite DeployAdapter (.b32.i2p).
    # Parallel in shape to deploy-onion: config + address-resolution
    # half ships first; content publish lands as a follow-up.
    "crates/deploy-i2p",
    # T41: deploy-ipfs — IPFS / IPNS DeployAdapter. Content-addressed
    # (CIDs); IPNS gives mutable pointer. Validation + snapshot-based
    # CID resolution this iteration; daemon publish step is a follow-up.
    "crates/deploy-ipfs",
    # T42: deploy-gemini — smolnet (gemini://) DeployAdapter.
    "crates/deploy-gemini",
    # T42: deploy-lokinet — Oxen mesh (.loki) DeployAdapter with
    # ONS-name resolution.
    "crates/deploy-lokinet",
    # T43: deploy-security-rating — typed projection of every
    # adapter's SecurityProfile into a comparable per-target score.
    # Pure projection, zero per-adapter special-casing.
    "crates/deploy-security-rating",
    # T44: tenancy-core — typed TenantId + 3-tier isolation
    # primitives. Every multi-tenant subsystem (CMS, edit-serve,
    # per-customer Forge build) projects through this surface.
    "crates/tenancy-core",
    # T45: extension-abi — typed ABI every PlausiDen extension
    # projects through. Backend-independent.
    "crates/extension-abi",
    # T45: extension-host — trait every backend implements + NullHost
    # reference impl. Wasmtime backend lands in a separate crate so
    # the heavy dep doesn't pollute consumers.
    "crates/extension-host",
    # T52: i18n-core — typed LocaleId / TextDirection / Script /
    # MessageId / MessageBundle / plural+select forms. Every
    # translatable entity projects through here. Per-locale CLDR
    # plural rules + full ICU MessageFormat parser are follow-ups.
    "crates/i18n-core",
    # T53: i18n-fonts — per-script typed FontStack + Unicode-range
    # CSS emitter. System-fallback-first; web fonts are opt-in.
    "crates/i18n-fonts",
    # T54: region-adaptation — typed RegionProfile combining
    # ComplianceRegime + PaymentProvider + SearchEngine per
    # ISO 3166 region.
    "crates/region-adaptation",
    # T55: editor-ux-core — typed editor UX state (zoom levels,
    # inspector mode, palette state, AI bar lifecycle).
    "crates/editor-ux-core",
    # T56: ai-pipeline-core — typed 6-stage AI generation pipeline
    # (Brief → IA → Wireframe → Content → Tokens → Audit). LLM/LFI
    # backends are out-of-tree implementations of the Generator trait.
    "crates/ai-pipeline-core",
    # 2026-05-20: doctrine-core — typed projection of AVP-Doctrine
    # doctrine/rules/*.toml. Loads + validates the 71-rule database,
    # exposes query API. Used by `forge doctrine query`, the
    # doctrine-check PR gate, and the Forge findings-cite-rules wiring.
    "crates/doctrine-core",
    # orient-core (task #190): typed projection of the 12 PlausiDen
    # N-orientations per AVP-Doctrine N_ORIENTATION_SUBSTRATE.md.
    # Objective fully typed; remaining 10 orientations (compliance,
    # sovereignty, risk, resource, etc.) land per #191-#195.
    "crates/orient-core",
    # loom-traits (task #167): typed projection of the PlausiDen
    # trait DAG per AVP-Doctrine TRAIT_DAG.md. 54 traits across 11
    # categories (visibility / interaction / a11y / responsive /
    # i18n / theming / security / sovereignty / performance /
    # reliability / discipline). Companion to orient-core.
    "crates/loom-traits",
    # T64: manifest-attest — consolidated signing layer for every
    # PlausiDen artifact. Ed25519 today; ML-DSA hybrid lands in #65.
    "crates/manifest-attest",
    # T68: ops-status — typed SLO/SLI + error-budget computation +
    # status-page state. Operators feed metrics; this crate derives
    # the state deterministically.
    "crates/ops-status",
    # T69: observability-core — typed Otel-compatible span shape +
    # immutable hash-chained audit log. No exporter / no IO; the
    # contract every observer plugs into.
    "crates/observability-core",
    # T70: dr-core — typed disaster-recovery surface
    # (DrTier + RTO/RPO + DrillSchedule + RegionFailoverState).
    "crates/dr-core",
    # T72: commerce-core — typed Stripe billing + self-serve
    # onboarding + customer-admin permissions.
    "crates/commerce-core",
    # T73: compliance-evidence — typed SOC 2 + ISO 27001 evidence
    # collection as a continuous byproduct of normal operation.
    "crates/compliance-evidence",
    # T75: trust-safety-core — typed Trust & Safety contract surface
    # (ConcernKind / ScanConfidence / SafetyVerdict / ScanReport /
    # SafetyScanner). Real CSAM perceptual-hash / phishing-classifier /
    # OFAC-sanctions-list backends plug in via SafetyScanner.
    "crates/trust-safety-core",
    # T76: privacy-core — typed privacy-by-design contract: DSAR
    # request lifecycle (GDPR Art. 15-22 / CCPA §1798.100-130),
    # RetentionPolicy per DataCategory with lawful-basis, and
    # legal-by-default cookie consent (ePrivacy §5(3)).
    "crates/privacy-core",
    # T77: importers-core — typed CMS importer contract.
    # Closed ImporterKind (WordPress / Webflow / Squarespace /
    # Wix / Ghost / Contentful) + canonical CmsSection +
    # closed Block taxonomy. Per-source parsers (WXR XML /
    # Webflow JSON / etc.) plug in via Importer trait.
    "crates/importers-core",
    # T78: exporters-core — typed export contract: closed
    # ExportFormat (Markdown w/ YAML frontmatter, JSON,
    # JSON-LD per schema.org Article, portable tarball,
    # ActivityStreams 2.0). Builtin Markdown + JSON +
    # JSON-LD renderers; heavier formats plug in via
    # Exporter trait.
    "crates/exporters-core",
    # T79: federation-core — typed federation + IndieWeb
    # contract: closed FederationProtocol (ActivityPub /
    # Webmention / WebSub / Nostr / AT Protocol) +
    # protocol-discriminated FederationAddress + event
    # lifecycle. Per-protocol clients plug in via
    # FederationPublisher trait.
    "crates/federation-core",
    # T80: assets-core — typed asset pipeline contract.
    # Closed AssetFormat (AVIF/WebP/JPEG/PNG/HLS/DASH) +
    # IMAGE_FALLBACK_LADDER (AVIF→WebP→JPEG) + ExifPolicy
    # (Strip default) + AssetVariant + AssetBundle with
    # ladder-coverage + WCAG alt-text validation +
    # VisionAlt seam.
    "crates/assets-core",
    # T81: forms-core — typed forms contract.
    # Closed FieldKind taxonomy (Text/Email/.../File/
    # Honeypot/GdprConsent) + closed SpamSignal set +
    # AttachmentField (virus_scan_required=true default) +
    # GdprConsent + Form::validate (https-only webhook,
    # labelled fields, single-honeypot) + SubmissionState
    # + DeliveryAttempt.
    "crates/forms-core",
    # T82: search-core — typed search contract.
    # Closed SearchBackend (Typesense / Meilisearch /
    # Tantivy / SqliteFts5 / Quickwit) + IndexDoc shape +
    # Query (typo + facets + filters) + SearchResults +
    # AnalyticsEvent (typed query / click / zero-result) +
    # ContentGap aggregation record + SearchClient trait.
    "crates/search-core",
    # T83: email-core — typed email contract.
    # MessageKind (Transactional / Marketing) + RFC 8058
    # one-click list-unsubscribe enforcement + AuthState
    # (SPF/DKIM/DMARC per RFC 7208/6376/7489) + BIMI VMC
    # reference + BounceReason taxonomy with should_suppress
    # set.
    "crates/email-core",
    # T84: commerce-storefront-core — typed tenant-storefront.
    # Distinct from commerce-core (T72, operator billing):
    # Product + Variant (with ISO 4217 currency new-type +
    # i64 Money) + Inventory ReservationState + Tax
    # Jurisdiction (EU/UK/US/CA/AU) + ShippingZone +
    # customer-facing SubscriptionCadence.
    "crates/commerce-storefront-core",
    # T85: memberships-core — typed memberships + paywall.
    # Closed PaywallStrategy (Open / Hard / Metered /
    # TimeBased / Preview) + Tier + ContentPaywall +
    # MeterState (rolling-window) + MemberSnapshot +
    # AccessDecision (Allowed / RequiresMembership /
    # RequiresUpgrade / MeterExhausted / Preview) with a
    # pure-fn decide() at the core.
    "crates/memberships-core",
    # T86: domains-core — typed custom-domain + SSL contract.
    # DomainKind (Apex / Subdomain / Wildcard) + AcmeChallenge
    # (HTTP-01 / DNS-01 / TLS-ALPN-01) with wildcard /
    # challenge-compat enforced at type level (only DNS-01
    # validates wildcards per RFC 8555 §8.4) + DomainVerification
    # + CertState + HstsPolicy with hstspreload.org-eligible
    # check + RFC 1035 FQDN validation.
    "crates/domains-core",
    # T20: backend handler scaffolds. One module per [backends.X]
    # entry in backends.toml. Generated + maintained by
    # `loom backend-stub` / `loom backend-stub-all`. Joining the
    # workspace so `cargo check` covers it.
    "server-stub",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-or-later"
repository = "https://github.com/thepictishbeast/PlausiDen-Forge"

[workspace.dependencies]
# Errors: thiserror for typed errors at crate boundaries; anyhow at
# the binary edge so we get backtraces + context() chaining.
thiserror = "1"
anyhow = "1"

# Hashing: sha2 + base64 for SRI. blake3 considered for the next
# pass but SHA-384 is what the SRI spec mandates so the
# RFC-conforming implementation needs SHA-2 unconditionally.
sha2 = "0.10"
base64 = "0.22"

# CLI:
clap = { version = "4", features = ["derive", "env"] }

# Config + serialization:
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time:
time = { version = "0.3", features = ["formatting", "macros"] }

# Logging — tracing is the future-proof choice; env_logger is
# fine for v1.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Property-based testing per AVP-2 Tier 6. Each phase that
# parses arbitrary input MUST have a proptest target alongside
# its deterministic unit tests.
proptest = "1"

# T432: phases that mutate the static dir use tempfile to keep
# tests hermetic. RAII cleanup, no test cross-contamination.
tempfile = "3"

# T56: Ed25519 keypair + signature for the build-report Merkle
# chain attestation. ed25519-dalek is the canonical RustCrypto
# implementation, audited, no_std-capable, used by Solana / Tor /
# many others. We use it locally (no network); a future Sigstore
# extension can layer on top.
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# AVP-2 gate: no unwrap/expect in lib code without justification.
# Use the existing crate-local std::process::exit at the binary
# edge only.

[profile.release]
# REGRESSION-GUARD: opt-level=3 + LTO + single codegen unit gives
# ~2x faster forge runs vs default. The bash forge took ~6s on
# the PoC; Rust forge target is <300ms cold + <50ms warm.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

# ----------------------------------------------------------------
# Loom dev-loop path override (2026-05-20, task #144).
#
# forge-phases depends on Loom via git:
#   loom-tokens / loom-cms-render / loom-lint / loom-components
#   = { git = "https://github.com/thepictishbeast/PlausiDen-Loom.git", branch = "main" }
#
# Without override, every Loom edit requires commit+push+repin
# before Forge sees it. With the override, local edits land in
# the next `cargo build` immediately.
#
# To disable (e.g. CI building against the pinned commit), comment
# the block out; Cargo.lock regenerates either way.
[patch."https://github.com/thepictishbeast/PlausiDen-Loom.git"]
loom-tokens     = { path = "/home/paul/projects/PlausiDen-Loom/loom-tokens" }
loom-cms-render = { path = "/home/paul/projects/PlausiDen-Loom/loom-cms-render" }
loom-lint       = { path = "/home/paul/projects/PlausiDen-Loom/loom-lint" }
loom-components = { path = "/home/paul/projects/PlausiDen-Loom/loom-components" }
