[package]
name = "ai-pipeline-core"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed 6-stage AI generation pipeline: Brief → IA → Wireframe → Content → Tokens → Audit. Generator trait is consumer-implemented (LFI/LLM lives outside this crate)."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
