[package]
name = "assets-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed asset pipeline contract — AVIF/WebP/JPEG image variants with content-negotiation fallback ladder, HLS/DASH video, EXIF strip privacy default, vision-AI alt-text seam."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
