# integration-audit-allow: contract-first crate; runtime consumer queued — see docs/INTEGRATION_COVERAGE.md
[package]
name = "commerce-core"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed Stripe billing + self-serve onboarding state + customer-admin permission surface. No Stripe API client; the server impl wires this up."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known", "macros"] }
