[package]
name = "commerce-storefront-core"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed tenant-storefront contract — Product + Variant + Inventory + TaxJurisdiction + ShippingZone + customer-side Subscription. Distinct from commerce-core (T72), which covers operator-facing PlausiDen billing."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known", "macros"] }
