[package]
name = "compliance-evidence"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed SOC 2 Type II + ISO 27001 evidence-collection surface. Continuous byproduct of normal platform operation — no separate audit-prep cycle."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known", "macros"] }
