[package]
name = "deploy-lokinet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Lokinet (.loki / .snode) DeployAdapter — config + ONS-name resolution. Daemon talk lands in a follow-up."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
deploy-core = { path = "../deploy-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
