[package]
name = "deploy-onion"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tor v3 hidden-service DeployAdapter implementation. Validates config + reads .onion hostname; content publish lives in a follow-up."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
deploy-core = { path = "../deploy-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
