[package]
name = "doctrine-core"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "doctrine-core — typed projection of PlausiDen-AVP-Doctrine/doctrine/rules/*.toml. Loads, validates, and queries the canonical rule database (statement + rationale + enforcement triples). Used by `forge doctrine query`, the doctrine-check PR gate, and the Forge findings-cite-rules wiring."

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
