[package]
name = "domains-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed custom-domain + SSL contract — DomainVerification (DNS / HTTP-01 / DNS-01 challenge) + AcmeChallenge + CertState lifecycle + HstsPolicy (with preload requirements per RFC 6797 + hstspreload.org) + wildcard cert support."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known", "macros"] }
