[package]
name = "editor-ux-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed editor-UX state — ZoomLevel + InspectorMode + PaletteState + AiBarState + EditorState bundling. Drives canvas-dominant CMS + Loom edit-serve UIs."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
