[package]
name = "email-core"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed email contract — MessageKind (Transactional vs Marketing) + DMARC/SPF/DKIM alignment state + BIMI VMC reference + RFC 8058 list-unsubscribe one-click + bounce/complaint reason taxonomy."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known", "macros"] }
