[package]
name = "extension-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Trait every PlausiDen extension-host backend implements + NullHost reference impl. Wasm Component Model backend is a follow-up; tying the contract first lets every consumer integrate against a stable interface."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
extension-abi = { path = "../extension-abi" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
