# integration-audit-allow: contract-first crate; runtime consumer queued — see docs/INTEGRATION_COVERAGE.md
[package]
name = "extension-host"
version = "0.1.0"
publish = false  # workspace-internal; never published to crates.io
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Trait every extension-host backend implements + NullHost reference impl. Wasm Component Model backend is a follow-up; tying the contract first lets every consumer integrate against a stable interface."

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[dependencies]
extension-abi = { path = "../extension-abi" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
